# kubernation

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  about.hbs  about.toml  kubernation-tui-mvp-prompt.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/k8sciv/: Cargo.toml
crates/k8sciv-core/: Cargo.toml
crates/k8sciv-core/src/: events.rs  lib.rs
crates/k8sciv-core/src/k8s/: client.rs  logs.rs  mod.rs  watch.rs
crates/k8sciv-core/src/state/: attention.rs  fixtures.rs  model.rs  observed.rs  planned.rs  world.rs
crates/k8sciv-gui/: Cargo.toml
crates/k8sciv-gui/src/: almanac.rs  city.rs  draw.rs  main.rs  net.rs  node.rs  panels.rs  plan.rs  sprites.rs  text.rs  theme.rs  window.rs
crates/k8sciv/src/: app.rs  events.rs  logging.rs  main.rs
crates/k8sciv/src/config/: cli.rs
crates/k8sciv/src/ui/: attention_panel.rs  city.rs  context_picker.rs  help.rs  logs.rs  map.rs  mod.rs  node_detail.rs  sidebar.rs  status_bar.rs  symbols.rs  theme.rs  workloads.rs
crates/kubernation/: Cargo.toml  THIRD-PARTY-NOTICES.md
crates/kubernation-core/: Cargo.toml
crates/kubernation-core/examples/: smoke.rs
crates/kubernation-core/src/: events.rs  lib.rs  util.rs
crates/kubernation-core/src/k8s/: actions.rs  adapter.rs  browse.rs  client.rs  logs.rs  metrics.rs  mod.rs  opencost.rs  oracle_client.rs  portforward.rs  rbac.rs  watch.rs
crates/kubernation-core/src/state/: advisor.rs  attention.rs  blast.rs  chaos.rs  charter.rs  cost.rs  diagnose.rs  filter.rs  fixtures.rs  harden.rs  inspect.rs  logline.rs  mod.rs  model.rs  netpol.rs  observed.rs  opencost.rs  oracle.rs  oracle_config.rs  oracle_investigate.rs  oracle_suggest.rs  pair.rs  planned.rs  postmortem.rs  posture.rs  rollout.rs  saturation.rs  slo.rs  timeline.rs  world.rs
crates/kubernation-gui/: Cargo.toml
crates/kubernation-gui/assets/: CREDITS.md
crates/kubernation-gui/src/: advisor.rs  almanac.rs  browse.rs  city.rs  draw.rs  inspect.rs  main.rs  menu.rs  net.rs  node.rs  panels.rs  plan.rs  sidebar.rs  text.rs  theme.rs  window.rs
crates/kubernation/assets/: CREDITS.md
crates/kubernation/assets/fonts/: OFL.txt
crates/kubernation/src/: about.rs  advisor.rs  almanac.rs  app.rs  browse.rs  chaos.rs  charter.rs  city.rs  draw.rs  events.rs  inspect.rs  logging.rs  logo.rs  main.rs  menu.rs  net.rs  node.rs  oracle.rs  oracle_config_io.rs  panels.rs  plan.rs  prefs.rs  sidebar.rs  text.rs  textfield.rs  theme.rs  timeline.rs  window.rs  workloads.rs
crates/kubernation/src/config/: cli.rs  mod.rs
crates/kubernation/src/ui/: attention_panel.rs  browse.rs  city.rs  help.rs  inspect.rs  logs.rs  map.rs  mod.rs  namespace_picker.rs  node_detail.rs  plan.rs  sidebar.rs  status_bar.rs  symbols.rs  theme.rs  workloads.rs
docs/: ROADMAP.md  oracle-plan.md
hack/: gui-smoke.sh  kind-config.yaml  perf-seed.sh  samples-crd.yaml  samples.yaml
packaging/macos/: Info.plist.template  README.md  release-macos.sh
site/: CNAME  index.html  style.css
src/: app.rs  events.rs  main.rs  util.rs
src/config/: cli.rs  mod.rs
src/k8s/: client.rs  quantity.rs  watch.rs
src/state/: attention.rs  fixtures.rs  mod.rs  model.rs  observed.rs  pair.rs  planned.rs
src/ui/: attention_panel.rs  city.rs  context_picker.rs  help.rs  map.rs  mod.rs  node_detail.rs  sidebar.rs  status_bar.rs  symbols.rs  theme.rs  workloads.rs
