[workspace]
resolver = "2"
members = ["crates/k8sciv-core", "crates/k8sciv", "crates/k8sciv-gui"]
default-members = ["crates/k8sciv"]

[workspace.package]
# Single source of truth for every crate's version (semver). Bump in the same
# commit as the change: pre-1.0, minor = features/behaviour, patch =
# fixes/docs/refactor. See CLAUDE.md "Versioning". Releases are tagged vX.Y.Z.
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kubernation/kubernation"

[profile.release]
lto = "thin"
