[workspace]
resolver = "2"
members = ["crates/kubernation-core", "crates/kubernation"]
default-members = ["crates/kubernation"]

[workspace.package]
# Single source of truth for every crate's version (semver). Bump in the same
# commit as the change: post-1.0, major = breaking change, minor =
# features/behaviour, patch = fixes/docs/refactor. See CLAUDE.md "Versioning".
# Releases are tagged vX.Y.Z.
version = "1.0.0"
edition = "2024"
authors = ["Jason Olmsted"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kubernation/kubernation"

[profile.release]
lto = "thin"

# Vendored miniquad 0.4.10 + 2 targeted macOS crash patches (a dpi_scale=0
# guard backported from upstream master, and skip-GL-draw-during-live-resize —
# Apple's GL-on-Metal layer can segfault when drawn mid-resize on macOS 26 +
# Apple Silicon). macroquad pins `=0.4.10`, so no released upgrade can deliver
# either fix; the path patch satisfies the pin. See third_party/README.md;
# drop this when a fixed release lands that macroquad accepts.
[patch.crates-io]
miniquad = { path = "third_party/miniquad" }
