[package]
name = "k8sciv"
description = "K8sCiv — a Civilization-inspired Kubernetes TUI: the cluster as a living world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k8sciv-core = { path = "../k8sciv-core" }
ratatui = "0.30"
ratatui-crossterm = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
k8sciv-core = { path = "../k8sciv-core", features = ["fixtures"] }
