[package]
name = "kubernation-gui"
description = "Kubernation GUI spike: a windowed 4X-style map client over kubernation-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kubernation-core = { path = "../kubernation-core" }
macroquad = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
clap = { version = "4", features = ["derive"] }
# PNG decode + resize for the bundled logo (window icon at 16/32/64).
image = { version = "0.24", default-features = false, features = ["png"] }
