[package]
name = "kubernation"
description = "KuberNation: a 4X-inspired Kubernetes explorer (windowed map client over kubernation-core)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# `oracle` turns on the BYO-LLM HTTP egress for the product binary (it stays off
# for the headless core smoke gate). Egress is still opt-in at RUNTIME via config.
kubernation-core = { path = "../kubernation-core", features = ["oracle"] }
macroquad = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# (De)serialization of the Oracle endpoint-profile config + the prefs file.
# Already in the lock via kubernation-core — zero new crates.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# PNG decode + resize for the bundled logo (window icon at 16/32/64).
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
# Synthetic worlds for testing the pure draw-decision helpers (region_lines,
# …) without a cluster or a GL context.
kubernation-core = { path = "../kubernation-core", features = ["fixtures"] }
